Add gradle expert skill